ci-cd/kubernetes-manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: acme-wp
  labels:
    name: acme-wp
    app: wordpress
