ci-cd/kubernetes-manifests/04-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acme-wp-db
  namespace: acme-wp
  labels:
    app: acme-wp
    component: database
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql
  selector:
    app: acme-wp
    component: database
