ci-cd/kubernetes-manifests/07-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acme-wp-api
  namespace: acme-wp
  labels:
    app: acme-wp
    component: api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: acme-wp
    component: api
