ci-cd/kubernetes-manifests/10-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acme-wp-frontend
  namespace: acme-wp
  labels:
    app: acme-wp
    component: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: acme-wp
    component: frontend
