ci-cd/kubernetes-manifests/14-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme-wp-ingress
  namespace: acme-wp
  labels:
    app: acme-wp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: deko.sdlbdcloud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: acme-wp-frontend
                port:
                  number: 80
